--- a/styles/main.css
+++ b/styles/main.css
@@ -68,28 +68,15 @@ img.next-image {
 }
 
 :root {
-  --shiki-color-text: #414141;
-  --shiki-color-background: transparent;
-  --shiki-token-constant: #1976d2;
-  --shiki-token-string: #22863a;
-  --shiki-token-comment: #aaa;
-  --shiki-token-keyword: #d32f2f;
-  --shiki-token-parameter: #ff9800;
-  --shiki-token-function: #6f42c1;
-  --shiki-token-string-expression: #22863a;
-  --shiki-token-punctuation: #212121;
-  --shiki-token-link: #22863a;
-}
- 
-.dark {
-  --shiki-color-text: #d1d1d1;
-  --shiki-token-constant: #79b8ff;
-  --shiki-token-string: #ffab70;
-  --shiki-token-comment: #6b737c;
-  --shiki-token-keyword: #f97583;
-  --shiki-token-parameter: #ff9800;
-  --shiki-token-function: #b392f0;
-  --shiki-token-string-expression: #4bb74a;
-  --shiki-token-punctuation: #bbb;
-  --shiki-token-link: #ffab70;
+  --shiki-color-text: #fff;
+  --shiki-color-background: #0d0d0d;
+  --shiki-token-constant: #eaa5ea;
+  --shiki-token-string: #99cc99;
+  --shiki-token-comment: #999999;
+  --shiki-token-keyword: #ffce9a;
+  --shiki-token-parameter: #6699cc;
+  --shiki-token-function: #59a8f7;
+  --shiki-token-string-expression: #99cc99;
+  --shiki-token-punctuation: #ffead8;
+  --shiki-token-link: #66cccc;
 }
